03-traefik-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress
  namespace: kube-system
  labels:
    app: traefik-ingress
spec:
  selector:
    app: traefik-ingress
  type: LoadBalancer
  externalIPs:
  - 61.19.247.120
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: dashboard
    port: 8080
    protocol: TCP
