04-traefik-ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-authentication
  namespace: kube-system
spec:
  basicAuth:
    realm: "Traefik Dashboard"
    secret: traefik-dashboard-authentication

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
  namespace: kube-system
spec:
  entrypoints:
  - http
  routes:
  - match: Host(`trf.hs-network.info`)
    kind: Rule
    services:
    - name: traefik-ingress
      port: 8080
    middlewares:
    - name: traefik-dashboard-authentication
